--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
   <div class="card">
-    <img src="./resources/Cactus.jpg" alt="image of a Cactus">
+    <img src="./Cactus.jpg" alt="image of a Cactus">
     <p class="tag">Design</p>
     <p class="title">Embracing Minimalism</p>
     <p class="description">  From minimalist sculptures to minimalist <br> paintings, this blog will inspire you to <br> appreciate the beauty that lies in simplicity.</p>
